@@ -19,6 +19,13 @@ directives:
   rtems_chain_append
   rtems_chain_insert
   rtems_chain_is_tail
+  rtems_chain_append_with_empty_check
+  rtems_chain_prepend_with_empty_check
+  rtems_chain_get_with_empty_check
+  rtems_chain_append_with_notification
+  rtems_chain_prepend_with_notification
+  rtems_chain_get_with_notification
+  rtems_chain_get_with_wait
 
 concepts:
 
