@@ -1,4 +1,11 @@
 *** TEST OF RTEMS CHAIN API ***
 Init - Initialize chain empty
 INIT - Verify rtems_chain_insert
+INIT - Verify rtems_chain_append_with_empty_check
+INIT - Verify rtems_chain_prepend_with_empty_check
+INIT - Verify rtems_chain_get_with_empty_check
+INIT - Verify rtems_chain_append_with_notification
+INIT - Verify rtems_chain_prepend_with_notification
+INIT - Verify rtems_chain_get_with_notification
+INIT - Verify rtems_chain_get_with_wait
 *** END OF RTEMS CHAIN API TEST ***
